[package]
name = "easy_ssl"
version = "0.0.4"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

description = "this is a rust lib to create x509 ssl certificate and private key file via an api and can be used in other rust projects."
homepage = "https://github.com/gzbakku/fdb/tree/master/cert"
repository = "https://github.com/gzbakku/fdb/tree/master/cert"
readme = "README.md"
keywords = ["ssl", "openssl","certificate","rsa","generate"]
categories = ["cryptography", "api-bindings"]
license-file = "License.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.26"
