[package]
name = "files"
version = "0.1.0"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = "0.9.24"

#actix-web = "1.0.0"
actix-service = "0.4.2"

actix-web = { version = "1.0.0", features = ["ssl"] }

#actix-web = { version = "2.0", features = ["openssl"] }
#actix-service = "1.0.1"
openssl = { version="0.10" }

bytes = "0.4"
futures = "0.1"
env_logger = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
lazy_static = "1.4.0"

aes-gcm = "0.3.0"
rand = "0.7.2"
md5 = "0.7.0"
