[package]
name = "list"
version = "0.1.0"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = { version = "2.0", features = ["openssl"] }
actix-service = "1.0.0"
openssl = { version = "0.10", features = ["v110"] }
bytes = "0.5"
futures = "0.3.1"

json = "0.12.0"
