[package]
name = "postoffice"
version = "0.0.1"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
aes-gcm = "0.3.0"
rand = "0.7.2"
md5 = "0.7.0"
lazy_static = "1.4.0"
