[package]
name = "postoffice"
version = "0.0.24"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "this is a light weight tcp connection manager, including client and server side functions to communicate at high speed long living stable connctions with message que."
homepage = "https://github.com/gzbakku/fdb/tree/master/postoffice"
repository = "https://github.com/gzbakku/fdb/tree/master/postoffice"
readme = "README.md"
keywords = ["tcp", "message","server","client","socket"]
categories = ["web-programming::http-server", "web-programming::http-client", "api-bindings","web-programming::websocket"]
license-file = "License.md"

[dependencies]
base64 = "0.11.0"
aes-gcm = "0.3.0"
rand = "0.7.2"
md5 = "0.7.0"
lazy_static = "1.4.0"
hmac = "0.7.1"
sha2 = "0.8.1"
json = "0.12.1"
