[package]
name = "task"
version = "0.1.0"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
mio = {version="0.7.0",features=["os-poll"]}
lazy_static = "1.4.0"
