[package]
name = "engine"
version = "0.1.0"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postoffice = { path = "../../postoffice" }
lazy_static = "1.4.0"
json = "0.12.4"
futures = "0.3.5"
mio = {version="0.7.0",features=["os-poll"]}
