[package]
name = "warehouse"
version = "0.1.0"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# postoffice = "0.0.23"
json = "0.12.4"
lazy_static = "1.4.0"
rand = "0.7.3"
postoffice = { path = "../../postoffice" }
